# esp32s3_ppg_data_collect

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR.md  build.sh  partitions.csv  sdkconfig.defaults  内存占用情况分析.md  快速开始.md  架构分析.md
.github/workflows/: build.yml
components/battery/: CMakeLists.txt  battery.c
components/battery/include/: battery.h
components/ble_svc/: CMakeLists.txt  ble_svc.c
components/ble_svc/include/: ble_svc.h
components/compress/: CMakeLists.txt  compress.c
components/compress/include/: compress.h
components/dht11/: CMakeLists.txt  dht11.c
components/dht11/include/: dht11.h
components/max30102/: CMakeLists.txt  max30102.c
components/max30102/include/: max30102.h
components/ota_upgrade/: CMakeLists.txt  ota_upgrade.c
components/ota_upgrade/include/: ota_upgrade.h
components/power_mgmt/: CMakeLists.txt  power_mgmt.c
components/power_mgmt/include/: power_mgmt.h
components/ppg_algo/: CMakeLists.txt  ppg_algo.c
components/ppg_algo/include/: ppg_algo.h
components/ppg_config/: CMakeLists.txt
components/ppg_config/include/: ble_callbacks.h  http_callbacks.h  ppg_config.h
components/ppg_log/: CMakeLists.txt  ppg_log.c
components/ppg_log/include/: ppg_log.h
components/sd_storage/: CMakeLists.txt  sd_storage.c
components/sd_storage/include/: sd_storage.h
components/uart_recorder/: CMakeLists.txt  uart_recorder.c
components/uart_recorder/include/: uart_recorder.h
components/wifi_prov/: CMakeLists.txt  wifi_prov.c
components/wifi_prov/include/: wifi_prov.h
components/wifi_transfer/: CMakeLists.txt  wifi_transfer.c
components/wifi_transfer/include/: wifi_html_pages.h  wifi_transfer.h
docs/compose/plans/: 2026-07-12-architecture-cleanup.md  2026-07-12-p0-bugfixes.md
main/: CMakeLists.txt  idf_component.yml  main.c
